--- a/src/main/webapp/app/login/login.component.html
+++ b/src/main/webapp/app/login/login.component.html
@@ -3,7 +3,7 @@
     .main-content{
       width: 50%;
       border-radius: 20px;
-      box-shadow: 0 5px 5px rgba(0,0,0,.4);
+      box-shadow: 0px 0px 5px rgba(0,0,0,0.5);
       margin: 5em auto;
       display: flex;
     }
