--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -5,10 +5,13 @@
   <router-outlet name="navbar"></router-outlet>
 </div>
 
-<div class="container-fluid">
-  <div *ngIf="account == null" class="card jh-card" style="padding: 0; margin: 0; height: 100%; width: 100%">
-    <router-outlet></router-outlet>
-  </div>
+<div *ngIf="account == null" class="card jh-card" style="padding: 0; margin: 0; height: 100%; width: 100%">
+  <router-outlet></router-outlet>
+</div>
+<div class="container-lg" style="min-height: 100%; min-width: 100%">
+  <!--  <div *ngIf="account == null" class="card jh-card" style="padding: 0; margin: 0; height: 100%; width: 100%">-->
+  <!--    <router-outlet></router-outlet>-->
+  <!--  </div>-->
   <div *ngIf="account != null" class="card jh-card" style="margin: 0; height: 100%; width: 100%">
     <router-outlet></router-outlet>
   </div>
