--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -25,9 +25,9 @@
     }
 
     body {
-      padding: 0;
-      margin: 0;
-      background-color: #ffffff;
+      /*padding: 0;*/
+      /*margin: 0;*/
+      /*background-color: #ffffff;*/
     }
 
     .wrapper {
@@ -43,9 +43,22 @@
     .herobg {
       position: relative;
       overflow: hidden;
-      background-image: linear-gradient(to top, #810ca7 40%, rgb(81, 27, 101) 80%);
-      /*background-image: linear-gradient(to top, #810ca7 40%, #27273c 80%);*/
-      /*background: rgb(129, 12, 168); !*change color of the div*!*/
+      /*background-image: linear-gradient(to top, #810ca7 40%, rgb(81, 27, 101) 80%);*/
+      background: linear-gradient(-45deg, #9105be, #821fa2, #4c2a85, #320e3b);
+      background-size: 400% 400%;
+      animation: gradient 10s linear infinite;
+    }
+
+    @keyframes gradient {
+      0% {
+        background-position: 0% 50%;
+      }
+      50% {
+        background-position: 100% 50%;
+      }
+      100% {
+        background-position: 0% 50%;
+      }
     }
     /*#810CA7*/
 
@@ -203,11 +216,16 @@
     </div>
   </div>
 
+  <!--  code injected by Prabal for main page; used angular hook ngswitch to display the page-->
+
   <div class="col-md-6" [ngSwitch]="account != null" style="width: 100%; height: 780px; margin: 0">
     <div class="wrapper herobg" *ngSwitchCase="false">
       <div class="wave wave1"></div>
+      <div class="wave wave1"></div>
       <div class="wave wave2"></div>
 
+      <div class="wave wave3"></div>
+      <div class="wave wave3"></div>
       <div class="wave wave3"></div>
       <div class="wave wave4"></div>
       <div class="container">
