--- a/src/main/webapp/app/entities/budget/detail/budget-detail.component.html
+++ b/src/main/webapp/app/entities/budget/detail/budget-detail.component.html
@@ -1,7 +1,9 @@
 <div class="d-flex justify-content-center">
   <div class="col-8">
     <div *ngIf="budget">
-      <h2 data-cy="budgetDetailsHeading"><span jhiTranslate="teamprojectApp.budget.detail.title">Budget</span></h2>
+      <h2 data-cy="budgetDetailsHeading">
+        <span><Strong>Budget</Strong></span>
+      </h2>
 
       <hr />
 
