--- a/src/main/webapp/app/entities/budget/update/budget-update.component.html
+++ b/src/main/webapp/app/entities/budget/update/budget-update.component.html
@@ -1,8 +1,8 @@
 <div class="d-flex justify-content-center">
   <div class="col-8">
     <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
-      <h2 id="jhi-budget-heading" data-cy="BudgetCreateUpdateHeading" jhiTranslate="teamprojectApp.budget.home.createOrEditLabel">
-        Create or edit a Budget
+      <h2 id="jhi-budget-heading" data-cy="BudgetCreateUpdateHeading">
+        <Strong>Create or edit budget</Strong>
       </h2>
 
       <div>
