--- a/src/main/webapp/app/entities/category/detail/category-detail.component.html
+++ b/src/main/webapp/app/entities/category/detail/category-detail.component.html
@@ -1,7 +1,9 @@
 <div class="d-flex justify-content-center">
   <div class="col-8">
     <div *ngIf="category">
-      <h2 data-cy="categoryDetailsHeading"><span jhiTranslate="teamprojectApp.category.detail.title">Category</span></h2>
+      <h2 data-cy="categoryDetailsHeading">
+        <span><Strong>Category</Strong></span>
+      </h2>
 
       <hr />
 
