--- a/src/main/webapp/app/entities/category/update/category-update.component.html
+++ b/src/main/webapp/app/entities/category/update/category-update.component.html
@@ -1,8 +1,8 @@
 <div class="d-flex justify-content-center">
   <div class="col-8">
     <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
-      <h2 id="jhi-category-heading" data-cy="CategoryCreateUpdateHeading" jhiTranslate="teamprojectApp.category.home.createOrEditLabel">
-        Create or edit a Category
+      <h2 id="jhi-category-heading" data-cy="CategoryCreateUpdateHeading">
+        <Strong>Create or edit category</Strong>
       </h2>
 
       <div>
