--- a/src/main/webapp/app/entities/expenses/list/expenses.component.html
+++ b/src/main/webapp/app/entities/expenses/list/expenses.component.html
@@ -1,6 +1,6 @@
 <div>
   <h2 id="page-heading" data-cy="ExpensesHeading">
-    <span jhiTranslate="teamprojectApp.expenses.home.title">Expenses</span>
+    <span><Strong>Expenses</Strong></span>
     <h5 class="text-end">{{ today | date: 'MM/dd/yyyy' }}</h5>
     <div class="d-flex justify-content-between">
       <div class="d-flex justify-content-start">
