--- a/src/main/webapp/app/entities/expenses/update/expenses-update.component.html
+++ b/src/main/webapp/app/entities/expenses/update/expenses-update.component.html
@@ -1,8 +1,8 @@
 <div class="d-flex justify-content-center">
   <div class="col-8">
     <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
-      <h2 id="jhi-expenses-heading" data-cy="ExpensesCreateUpdateHeading" jhiTranslate="teamprojectApp.expenses.home.createOrEditLabel">
-        Create an Expense
+      <h2 id="jhi-expenses-heading" data-cy="ExpensesCreateUpdateHeading">
+        <Strong>Create or edit expense</Strong>
       </h2>
 
       <div>
