--- a/src/main/webapp/app/entities/financial-account/detail/financial-account-detail.component.html
+++ b/src/main/webapp/app/entities/financial-account/detail/financial-account-detail.component.html
@@ -2,7 +2,7 @@
   <div class="col-8">
     <div *ngIf="financialAccount">
       <h2 data-cy="financialAccountDetailsHeading">
-        <span jhiTranslate="teamprojectApp.financialAccount.detail.title">Financial Account</span>
+        <span><Strong>Financial Account</Strong></span>
       </h2>
 
       <hr />
