--- a/src/main/webapp/app/entities/financial-account/list/financial-account.component.html
+++ b/src/main/webapp/app/entities/financial-account/list/financial-account.component.html
@@ -1,6 +1,6 @@
 <div>
   <h2 id="page-heading" data-cy="FinancialAccountHeading">
-    <span jhiTranslate="teamprojectApp.financialAccount.home.title">Financial Accounts</span>
+    <span><Strong>Financial Accounts</Strong></span>
 
     <div class="d-flex justify-content-end">
       <button class="btn btn-info me-2" (click)="load()" [disabled]="isLoading">
