--- a/src/main/webapp/app/entities/financial-account/update/financial-account-update.component.html
+++ b/src/main/webapp/app/entities/financial-account/update/financial-account-update.component.html
@@ -1,12 +1,8 @@
 <div class="d-flex justify-content-center">
   <div class="col-8">
     <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
-      <h2
-        id="jhi-financial-account-heading"
-        data-cy="FinancialAccountCreateUpdateHeading"
-        jhiTranslate="teamprojectApp.financialAccount.home.createOrEditLabel"
-      >
-        Create or edit a Financial Account
+      <h2 id="jhi-financial-account-heading" data-cy="FinancialAccountCreateUpdateHeading">
+        <Strong>Create or edit a financial account</Strong>
       </h2>
 
       <div>
