--- a/src/main/webapp/app/entities/financial-transaction/detail/financial-transaction-detail.component.html
+++ b/src/main/webapp/app/entities/financial-transaction/detail/financial-transaction-detail.component.html
@@ -2,7 +2,7 @@
   <div class="col-8">
     <div *ngIf="financialTransaction">
       <h2 data-cy="financialTransactionDetailsHeading">
-        <span jhiTranslate="teamprojectApp.financialTransaction.detail.title">Financial Transaction</span>
+        <span><Strong>Financial Transaction</Strong></span>
       </h2>
 
       <hr />
