--- a/src/main/webapp/app/entities/financial-transaction/update/financial-transaction-update.component.html
+++ b/src/main/webapp/app/entities/financial-transaction/update/financial-transaction-update.component.html
@@ -1,12 +1,8 @@
 <div class="d-flex justify-content-center">
   <div class="col-8">
     <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
-      <h2
-        id="jhi-financial-transaction-heading"
-        data-cy="FinancialTransactionCreateUpdateHeading"
-        jhiTranslate="teamprojectApp.financialTransaction.home.createOrEditLabel"
-      >
-        Create or edit a Financial Transaction
+      <h2 id="jhi-financial-transaction-heading" data-cy="FinancialTransactionCreateUpdateHeading">
+        <Strong>Create or edit a financial transaction</Strong>
       </h2>
 
       <div>
