--- a/src/main/webapp/app/entities/income/detail/income-detail.component.html
+++ b/src/main/webapp/app/entities/income/detail/income-detail.component.html
@@ -1,7 +1,9 @@
 <div class="d-flex justify-content-center">
   <div class="col-8">
     <div *ngIf="income">
-      <h2 data-cy="incomeDetailsHeading"><span jhiTranslate="teamprojectApp.income.detail.title">Income</span></h2>
+      <h2 data-cy="incomeDetailsHeading">
+        <span><Strong>Income</Strong></span>
+      </h2>
 
       <hr />
 
