--- a/src/main/webapp/app/entities/category/list/category.component.html
+++ b/src/main/webapp/app/entities/category/list/category.component.html
@@ -1,6 +1,6 @@
 <div>
   <h2 id="page-heading" data-cy="CategoryHeading">
-    <span jhiTranslate="teamprojectApp.category.home.title">Categories</span>
+    <span><Strong>Categories</Strong></span>
 
     <div class="d-flex justify-content-end">
       <button class="btn btn-info me-2" (click)="load()" [disabled]="isLoading">
