--- a/src/main/webapp/app/entities/expenses/detail/expenses-detail.component.html
+++ b/src/main/webapp/app/entities/expenses/detail/expenses-detail.component.html
@@ -1,7 +1,9 @@
 <div class="d-flex justify-content-center">
   <div class="col-8">
     <div *ngIf="expenses">
-      <h2 data-cy="expensesDetailsHeading"><span jhiTranslate="teamprojectApp.expenses.detail.title">Expenses</span></h2>
+      <h2 data-cy="expensesDetailsHeading">
+        <span><Strong>Expenses</Strong></span>
+      </h2>
 
       <hr />
 
