--- a/src/main/webapp/app/entities/financial-transaction/list/financial-transaction.component.html
+++ b/src/main/webapp/app/entities/financial-transaction/list/financial-transaction.component.html
@@ -1,6 +1,6 @@
 <div>
   <h2 id="page-heading" data-cy="FinancialTransactionHeading">
-    <span jhiTranslate="teamprojectApp.financialTransaction.home.title">Financial Transactions</span>
+    <span><Strong>Financial Transactions</Strong></span>
 
     <div class="d-flex justify-content-end">
       <button class="btn btn-info me-2" (click)="load()" [disabled]="isLoading">
