Updated category page

--- a/src/main/webapp/app/entities/budget/detail/budget-detail.component.html
+++ b/src/main/webapp/app/entities/budget/detail/budget-detail.component.html
@@ -18,7 +18,7 @@
         <dd>
           <span>{{ budget.budgetId }}</span>
         </dd>
-        <dt><span jhiTranslate="teamprojectApp.budget.monthOfTheTime">Month Of The Time</span></dt>
+        <dt><span jhiTranslate="teamprojectApp.budget.monthOfTheTime">Month</span></dt>
         <dd>
           <span>{{ budget.monthOfTheTime | formatMediumDate }}</span>
         </dd>
