--- a/src/main/webapp/app/entities/category/list/category.component.html
+++ b/src/main/webapp/app/entities/category/list/category.component.html
@@ -62,7 +62,7 @@
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
-          <th scope="col" jhiSortBy="budget.id">
+          <!--<th scope="col" jhiSortBy="budget.id">
             <div class="d-flex">
               <span jhiTranslate="teamprojectApp.category.budget">Budget</span>
               <fa-icon class="p-1" icon="sort"></fa-icon>
@@ -73,7 +73,7 @@
               <span jhiTranslate="teamprojectApp.category.budget">Budget</span>
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
-          </th>
+          </th>-->
           <th scope="col"></th>
         </tr>
       </thead>
