--- a/src/main/webapp/app/entities/category/update/category-update.component.html
+++ b/src/main/webapp/app/entities/category/update/category-update.component.html
@@ -13,7 +13,7 @@
           <input type="number" class="form-control" name="id" id="field_id" data-cy="id" formControlName="id" [readonly]="true" />
         </div>
 
-        <div class="row mb-3">
+        <!--<div class="row mb-3">
           <label class="form-label" jhiTranslate="teamprojectApp.category.categoryId" for="field_categoryId">Category Id</label>
           <input
             type="number"
@@ -23,7 +23,7 @@
             data-cy="categoryId"
             formControlName="categoryId"
           />
-        </div>
+        </div>-->
 
         <div class="row mb-3">
           <label class="form-label" jhiTranslate="teamprojectApp.category.categoryName" for="field_categoryName">Category Name</label>
@@ -90,7 +90,7 @@
           </div>
         </div>
 
-        <div class="row mb-3">
+        <!--<div class="row mb-3">
           <label class="form-label" jhiTranslate="teamprojectApp.category.budget" for="field_budget">Budget</label>
           <select
             class="form-control"
@@ -103,9 +103,9 @@
             <option [ngValue]="null"></option>
             <option [ngValue]="budgetOption" *ngFor="let budgetOption of budgetsSharedCollection">{{ budgetOption.id }}</option>
           </select>
-        </div>
+        </div>-->
 
-        <div class="row mb-3">
+        <<!--div class="row mb-3">
           <label class="form-label" jhiTranslate="teamprojectApp.category.budget" for="field_budget">Budget</label>
           <select
             class="form-control"
@@ -118,7 +118,7 @@
             <option [ngValue]="null"></option>
             <option [ngValue]="budgetOption" *ngFor="let budgetOption of budgetsSharedCollection">{{ budgetOption.id }}</option>
           </select>
-        </div>
+        </div>-->
       </div>
 
       <div>
