--- a/src/main/webapp/app/login/login.component.html
+++ b/src/main/webapp/app/login/login.component.html
@@ -1,5 +1,15 @@
 <head>
   <style>
+    html{
+      height: 900px;
+      width: 100%;
+    }
+    body{
+      height: 900px;
+      width: 100%;
+    }
+
+
     .main-content{
       width: 50%;
       border-radius: 20px;
@@ -79,7 +89,7 @@
   </style>
 </head>
 
-<div class="container-fluid">
+<div class="container-fluid" style="height: 100%">
   <div class="row main-content bg-success text-center">
     <div style="display: flex; align-items: center; align-content: center" class="col-md-4 text-center company__info">
       <svg width="191.58020477294923" height="25.4187565439278" viewBox="0 0 370.00000000000006 60.171917139969665" class="css-1j8o68f">
@@ -168,6 +178,19 @@
       </div>
     </div>
   </div>
+  <!--  <div class="footer disclaimer">-->
+  <!--    <span-->
+  <!--      class="projectDisclaimer"-->
+  <!--      style="font-family: 'Leelawadee UI'; margin-left: 20px; font-weight: 100; font-size: small; letter-spacing: 1px"-->
+  <!--    >Alpha Project Disclaimer</span-->
+  <!--    >-->
+  <!--    <p class="ftrContent" style="font-family: 'Leelawadee UI'; margin-left: 20px; font-weight: 100; font-size: small; letter-spacing: 1px">-->
+  <!--      This server is provided by the School of Computer Science at the University of Birmingham to allow users to provide feedback on-->
+  <!--      software developed by students as part of an assignment. While we take reasonable precautions, we cannot guarantee the security of the-->
+  <!--      data entered into the system. Do NOT enter any real personal data (e.g., financial information or otherwise) into the system. The-->
+  <!--      assignment runs until May 31st 2023, at which time the server and all associated data will be destroyed.-->
+  <!--    </p>-->
+  <!--  </div>-->
 </div>
 
 <!--<div>-->
