--- a/src/main/webapp/app/entities/analytics/list/analytics.component.html
+++ b/src/main/webapp/app/entities/analytics/list/analytics.component.html
@@ -83,6 +83,7 @@
   </div>
   <br /><br />
   <br />
+  <hr style="box-shadow: 1px 3px #888888" />
 
   <h1 #opera></h1>
   <jhi-alert-error></jhi-alert-error>
