--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -10,17 +10,8 @@
       width: 100%;
     }
 
-    .ftrContent {
-      display: none;
-    }
-
-    .footer:hover p {
-      display: block;
-    }
-
     .btn:hover {
       color: rgb(129, 12, 168);
-      /*color: rgba(0, 0, 0,0);*/
       background: #ffffff;
       border: 2px solid rgb(129, 12, 168);
     }
@@ -30,8 +21,6 @@
     }
 
     .alert-link:hover {
-      /*color: rgba(255,255, 255,0);*/
-
       color: rgb(129, 12, 168);
     }
 
@@ -55,7 +44,7 @@
       position: relative;
       overflow: hidden;
       /*background-image: linear-gradient(to top, #810ca7 40%, rgb(81, 27, 101) 80%);*/
-      background: linear-gradient(-45deg, #7204fc, #821fa2, #00a29d, #320e3b);
+      background: linear-gradient(-45deg, #9105be, #821fa2, #4c2a85, #320e3b);
       background-size: 400% 400%;
       animation: gradient 10s linear infinite;
     }
@@ -94,7 +83,7 @@
     /*Change speed of animation*/
     .wave.wave1 {
       animation: animate 30s linear infinite;
-      z-index: 5;
+      z-index: 1000;
       opacity: 1;
       animation-delay: 0s;
       bottom: 0;
@@ -102,7 +91,7 @@
 
     .wave.wave2 {
       animation: animate2 35s linear infinite;
-      z-index: 4;
+      z-index: 999;
       opacity: 0.5;
       animation-delay: -5s;
       bottom: 10px;
@@ -110,7 +99,7 @@
 
     .wave.wave3 {
       animation: animate 30s cubic-bezier(0.17, 0.67, 0.83, 0.67) infinite;
-      z-index: 3;
+      z-index: 998;
       opacity: 0.2;
       animation-delay: -2s;
       bottom: 15px;
@@ -118,7 +107,7 @@
 
     .wave.wave4 {
       animation: animate2 35s cubic-bezier(0.17, 0.67, 0.83, 0.67) infinite;
-      z-index: 2;
+      z-index: 997;
       opacity: 0.7;
       animation-delay: -5s;
       bottom: 20px;
@@ -321,22 +310,5 @@
     <!--    <span jhiTranslate="global.messages.info.register.noaccount">You don't have an account yet?</span>&nbsp;-->
     <!--    <a class="alert-link" routerLink="account/register">Sign up - it's free</a>-->
     <!--  </div>-->
-    <!--    *ngSwitchCase="false"-->
-    <div class="footer disclaimer" *ngSwitchCase="false" style="margin-top: 75px">
-      <span
-        class="projectDisclaimer"
-        style="font-family: 'Leelawadee UI'; margin-left: 20px; font-weight: 100; font-size: small; letter-spacing: 1px"
-        >Alpha Project Disclaimer (hover to read)</span
-      >
-      <p
-        class="ftrContent"
-        style="font-family: 'Leelawadee UI'; margin-left: 20px; font-weight: 100; font-size: small; letter-spacing: 1px"
-      >
-        This server is provided by the School of Computer Science at the University of Birmingham to allow users to provide feedback on
-        software developed by students as part of an assignment. While we take reasonable precautions, we cannot guarantee the security of
-        the data entered into the system. Do NOT enter any real personal data (e.g., financial information or otherwise) into the system.
-        The assignment runs until May 31st 2023, at which time the server and all associated data will be destroyed.
-      </p>
-    </div>
   </div>
 </html>
