Revert "Removed budgetTarget from Category"
This reverts commit 8af46de08743f903f8837fde2c92bd67b1d860db

--- a/src/main/webapp/app/entities/category/detail/category-detail.component.html
+++ b/src/main/webapp/app/entities/category/detail/category-detail.component.html
@@ -28,7 +28,10 @@
         <dd>
           <span>{{ category.description }}</span>
         </dd>
-
+        <dt><span jhiTranslate="teamprojectApp.category.budgetTarget">Budget Target</span></dt>
+        <dd>
+          <span>{{ category.budgetTarget }}</span>
+        </dd>
         <!--<dt><span jhiTranslate="teamprojectApp.category.budget">Budget</span></dt>
         <dd>
           <div *ngIf="category.budget">
