--- a/src/main/webapp/app/entities/category/list/category.component.html
+++ b/src/main/webapp/app/entities/category/list/category.component.html
@@ -56,6 +56,12 @@
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
+          <th scope="col" jhiSortBy="budgetTarget">
+            <div class="d-flex">
+              <span jhiTranslate="teamprojectApp.category.budgetTarget">Budget Target</span>
+              <fa-icon class="p-1" icon="sort"></fa-icon>
+            </div>
+          </th>
           <!--<th scope="col" jhiSortBy="budget.id">
             <div class="d-flex">
               <span jhiTranslate="teamprojectApp.category.budget">Budget</span>
@@ -79,6 +85,7 @@
           <td>{{ category.categoryId }}</td>
           <td>{{ category.categoryName }}</td>
           <td>{{ category.description }}</td>
+          <td>{{ category.budgetTarget }}</td>
           <td>
             <div *ngIf="category.budget">
               <a [routerLink]="['/budget', category.budget.id, 'view']">{{ category.budget.id }}</a>
