Updated budgetMonth and totalbudget display

--- a/src/main/webapp/app/entities/budget/detail/budget-detail.component.html
+++ b/src/main/webapp/app/entities/budget/detail/budget-detail.component.html
@@ -22,7 +22,7 @@
         </dd>
         <dt><span jhiTranslate="teamprojectApp.budget.monthOfTheTime">Month</span></dt>
         <dd>
-          <span>{{ budget.monthOfTheTime | formatMediumDate }}</span>
+          <span>{{ formatMonth(budget.monthOfTheTime) }}</span>
         </dd>
         <dt><span jhiTranslate="teamprojectApp.budget.totalBudget">Total Budget</span></dt>
         <dd>
