--- a/src/main/webapp/app/entities/budget/list/budget.component.html
+++ b/src/main/webapp/app/entities/budget/list/budget.component.html
@@ -122,7 +122,7 @@
             <a [routerLink]="['/budget', budget.id, 'view']">{{ budget.id }}</a>
           </td>
           <td>{{ budget.budgetId }}</td>
-          <td>{{ budget.monthOfTheTime | formatMediumDate }}</td>
+          <td>{{ formatMonth(budget.monthOfTheTime) }}</td>
           <td>{{ budget.totalBudget }}</td>
           <td>{{ budget.totalSpent }}</td>
           <td>{{ budget.amountRemaining }}</td>
